fixed the unaligned buttons

--- a/theme.css
+++ b/theme.css
@@ -101,6 +101,6 @@ h5 {
     border-radius: 2px;   
     font-size: 20px;
     height: 75px;
-    width: 275px;
+    width: 255px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
